Changes for 1.7.4

 - [DEV-339] added more internal checks zabbix[wcache,*] and abbix[rcache,*] (Sasha)
 - [ZBX-1209] fixed new node not shown in the list after adding (Vedmak)
 - [ZBX-1221] fixed node adding mechanizm (Vedmak)
 - [ZBX-1400] changed none working time highlight color for default graph themes (Aly)
 - [ZBX-1404] fixed undefined variable in screens (Aly)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [DEV-411] added configuration parameters for dbcache module (Sasha)
 - [ZBX-1090] fixes for returned values from API calls (Aly)
 - [ZBX-1356] fixed undefined errors on user group deletion (Aly)
 - [ZBX-1403] fixed discovery widget to show only discovery from selected node (Aly)
 - [ZBX-1397] make 'History' string in page header translatable, thanks to Alexey Pustovalov (Richlv)
 - [ZBX-1381] performance improvements for maps view (Aly)
 - [ZBX-1325] fixed error when add host or hostgroup with postgre (Vedmak)
 - [DEV-137] removed "IF NOT EXISTS" clauses from Sqlite DB schema (Alexei)
 - [ZBX-1395] fixed map elements highlighting option (Aly)
 - [ZBX-1396] fixes in map element selection (Aly)
 - [ZBX-1394] fixed compilation of checks_db.c with enabled iODBC (Sasha)
 - [DEV-137] minor fix for PostgreSQL patch (Alexei)

Changes for 1.7.3

 - [DEV-369] added item check "log.regexp" with file log rotation, the parameter "fileformat" has a format [path][regexp] (Dmitry)
 - [DEV-242] add dynamic map creation (Aly)
 - [DEV-435] Improvements in monitoring triggers screen (Vedmak)
 - [ZBX-1340] fixed cancel button in forms (Vedmak)
 - [ZBX-1366] fixed dashboard last 20 issues showing events from different triggers (Vedmak)
 - [ZBX-1382] improved performance in dahsboard latest 20 issues (Vedmak)
 - [ZBX-1392] fixed representing of Uptime/Downtime times and slavery discovered devices in STATUS OF DISCOVERY screen (Dmitry)
 - [ZBX-1363] fixed user deletion with PostgreSQL (Vedmak)